--- a/attestation1_tasks.ipynb
+++ b/attestation1_tasks.ipynb
@@ -15,10 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m sd\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sd"
+   ]
   },
   {
    "cell_type": "code",
